--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 	</head>
 	<body>
 		<header class="container">
-			<h1>Tool Lending</h1>
+			<h1>The Tool Libary</h1>
 			<ul class="nav">
-				<li><strong>LENDING IS LOVELY</strong></li>
-				<li>AN OPEN SOURCE, EASY TO DUPLICATE PROJECT</li>
+				<li><strong>ADD TOOLS, USE TOOL, SHARE TOOLS. </strong></li>
+				<li>A resource to share tools and supplies between a group of friends </li>
 				<li><a href="#info">HERE'S HOW</a></li>
 			</ul>
 		</header>
